# training-1.58bit-llms-via-distillation

./: .env.local  .gitattributes  .gitignore  .pylintrc  LICENSE  Makefile  README.md  input.txt  pyproject.toml
data/: benchmark.md  smol_layers_sorted_by_LIM.txt
devops/: connect_backet.sh
mlruns/: config.yaml
mlruns/0/: meta.yaml
mlruns/770830031765675480/: meta.yaml
mlruns/770830031765675480/072296dc36b5445ab5ba214c1808be32/: meta.yaml
mlruns/770830031765675480/0e8204812f8b4ef3b77fdf5ee7da333d/: .meta.yaml.vZc2GN  meta.yaml
mlruns/770830031765675480/131b8c56df3949ecbf4003bf1bce1619/: meta.yaml
mlruns/770830031765675480/193d2503b2f1459c810243bbc495377c/: meta.yaml
mlruns/770830031765675480/1e7a82c434aa47ccbc93c0e6b0bf7e2c/: meta.yaml
mlruns/770830031765675480/23694745918c4770addfb4d03f77702a/: meta.yaml
mlruns/770830031765675480/28eed76e8c314d0cbed4f731aae9c986/: meta.yaml
mlruns/770830031765675480/2eed4fc6d9fb453db26619186e9a592f/: meta.yaml
mlruns/770830031765675480/5434bcd297ed4f49ae622fca4d1f6c48/: meta.yaml
mlruns/770830031765675480/554e78a55da44981b945bcc6a6079093/: meta.yaml
paper/: Makefile  proposal.tex  references.bib  report.tex  template.tex
scripts/: benchmark.sh  grid_search.sh
src/: benchmark.py  chat.py  constants.py  datamodules.py  hf_class.py  layers.py  loss.py  main.py  mlflow.py  models.py  plots.py  select_data.py  utils.py
src/hf_model/: benchmark.py  hf_class.py  push_hf_model.py  register.py  register_and_test.py
src/layer_analysis/: what_to_quantize.py
src/layers/: __init__.py  analysis.py  quantized.py
src/models/: __init__.py  example.py  mixins.py  quantized.py
(+306 files in other folders)
