[project]
name = "training-1-58bit-llms-via-distillation"
version = "0.1.0"
description = "NLP Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub[cli]>=0.32.4",
    "isort>=6.0.1",
    "lightning[extra]>=2.5.1.post0",
    "mlflow>=2.22.1",
    "numpy>=2.2.6",
    "torch>=2.7.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=3.3.7",
]
