[project]
name = "training-1-58bit-llms-via-distillation"
version = "0.1.0"
description = "NLP Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "huggingface-hub[cli]>=0.32.4",
    "isort>=6.0.1",
    "lightning[extra]>=2.5.1.post0",
    "lm-eval>=0.4.9",
    "matplotlib>=3.10.3",
    "mlflow>=2.22.1",
    "numpy>=2.2.6",
    "polars>=1.31.0",
    "pyqt6>=6.9.1",
    "python-decouple>=3.8",
    "safetensors>=0.5.3",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=3.3.7",
]
